# flacplayer

./: .gitignore  CMakeLists.txt  README.md  align.h  align_unit_test.cpp  alsa_audio_device.cpp  alsa_audio_device.h  arm_toolchain.cmake  as_const.h  asoundrc  audio_buffer.h  audio_buffer_benchmark.cpp  audio_buffer_unit_test.cpp  audio_format.h  audio_format_unit_test.cpp  bit_cast.h  build.ninja  conditions.h  core_audio_device.cpp  core_audio_device.h  file_desc.h  file_desc_unit_test.cpp  flac_decode_unit_test.cpp  flow_control.h  gen_16bps.py  gen_24bps.py  linux_player.cpp  mac_player.cpp  stream.cpp  stream.h  stream_unit_test.cpp
assets/: gen_16bps.py  gen_24bps.py
